--- a/public/boards/side-bar.scss
+++ b/public/boards/side-bar.scss
@@ -14,6 +14,7 @@ side-bar{
     min-width: 15em;
     max-width: 20vw;
     pointer-events: none;
+    z-index: 0;
 
     .message{
         display: block;
@@ -41,6 +42,11 @@ side-bar{
         border-bottom: 1px solid currentColor;
         margin: 0.5em 0.3em;
         position: relative;
+
+        &:first-child,&:last-child{
+            display: none;
+        }
+
 
 
         &:before,&:after{
